OAuthSuccess fix